--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "html-loader": "^0.4.5",
     "ionicons": "^3.0.0",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "material-icons": "^0.1.0",
     "materialize-css": "^0.98.2",
