--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "material-icons": "^0.1.0",
     "materialize-css": "^0.98.2",
     "vue": "^2.2.6",
+    "vue-moment": "^2.0.2",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1",
